--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="..\pic1.png" alt="my picture"></td>
+                <td><img src="pic1.png" alt="my picture"></td>
                 <td>
                     <h1>Welcome to Jhoan's site</h1>
                     <p><em> Student of Python <strong><a href="https://www.facebook.com/">bootcamp</a></strong></em></p>
